# education

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .prettierignore  AISD Calculator.sln  AISD Calculator.vcxproj  AISD Calculator.vcxproj.filters  CMakeLists.txt  CMakePresets.json  Constants.h  Helpers.h  LICENSE  LICENSE.txt  Node.cpp  Node.h  PostfixNotation.cpp  PostfixNotation.h  Queue.cpp  Queue.h  README.md  Stack.cpp  Stack.h  Token.cpp  Token.h  TokenNode.cpp  TokenNode.h  app.cpp  app.h  board.cpp  board.hpp  common.h  constants.h  controls.cpp  controls.h  defs.h  display.cpp  display.h  draw.cpp  draw.h  (+21 more)
.unotes/: unotes_meta.json
AL_28_01 - Piramidka/: main.cpp
CALC - Kalkulator/: main(2).cpp
CUK - Cukiernia/: cuk.cpp  main.cpp
DDZ5 - Prawie jak Fibonacci, prawie/: main.cpp
EUCGAME - Gra Euklidesa/: main.cpp
FCTRL3 - Dwie cyfry silni/: main.cpp
FLAMASTE - Flamaster/: main2.cpp
Inne/Grzybiarz/: grzyb.cpp  grzyb0.in  grzyb1.in
LIGA algorytmiczna CMI - Gremliny/: DOO.cpp  DRO.cpp  FAB.cpp  KOL.cpp  OPE.cpp  ope-01.txt
POL - Połowa/: main.cpp
PP0501A - NWD/: main2.cpp
PP0604A - Średnia arytmetyczna/: main.cpp
PRIME_T - Liczby Pierwsze/: main.cpp
PRZEDSZK - Przedszkolanka/: main.cpp
PTCLTZ - Problem Collatza/: main.cpp
PTROL - ROL/: main.cpp
RNO_DOD - Proste dodawanie/: main.cpp  main.exe.stackdump  main3.cpp
SPOJ/AL_28_01 - Piramidka/: main.cpp
SPOJ/CALC - Kalkulator/: main.cpp
SPOJ/DOUGHNUT - Harry and big doughnuts/: main.cpp
SPOJ/FLAMASTE - Flamaster/: main.cpp
SPOJ/GLUTTON - Obżartuchy/: main.cpp
SPOJ/JROWLIN - Równanie liniowe/: main.cpp
SPOJ/JZAPKAB - Kabalistyczny zapis daty/: main.cpp
SPOJ/LIDER - Lider/: main.cpp
SPOJ/MWP3_1C1 - Działka/: main.cpp
SPOJ/POTSAM - Samolot/: main.cpp
SPOJ/PP0501A - NWD/: main.cpp
SPOJ/PP0506A - Sort 1/: main.cpp
SPOJ/PP0601B - Podzielność/: main.cpp
SPOJ/RNO_DOD - Proste dodawanie/: main2.cpp
SPOJ/SKARBFI - SkarbFinder/: main.cpp
SPOJ/TFIBRE - Sieć czysto światłowodowa/: README.md  main2-final.cpp  spoj.cpp
SPOJ/T_PINTR - Punkty w trójkącie/: main.cpp
SPOJ/WI_DZWON - Szkolne dzwonki/: main.cpp
SPOJ/WI_SZYFR - Szyfr Gronsfelda/: main-2.cpp  main.cpp
STOS - Stos/: main.cpp
SUDOKUC - Sprawdzanie sudoku/: main.cpp  main2.cpp
SZKOpul/ods - Odsniezanie/: polecenie.md
TFIBRE - Sieć czysto światłowodowa/: main.cpp  main2.cpp  main3.cpp
VSR - Predkość średnia/: main.cpp
WI_IDEN - Skracanie identyfikatorów/: main.cpp
XXVIII - I etap/: README.md
XXVIII - I etap/CUK - Cukiernia/: cuk.md
XXVIII - I etap/CUK-Cukiernia/: cuk.cpp
docs/: Demo game - Catch the Ball.c  README.md
guidos-gorgeous-lasagna/: __init__.py
include/: command_parser.h  common.h  config.h  controller.h  file_handler.h  guards.h  input_handler.h  input_processor.h  line_parser.h  product.h  product_stock.h  render.h  shared.h  validator.h  warehouse.h  warehouse_section.h
jumping-frog/: .gitignore  CMakeLists.txt  CMakePresets.json  app.cpp  app.hpp  config.cpp  config.hpp  entity.cpp  entity.hpp  game.cpp  game.hpp  hello.cpp  hello.hpp  input.cpp  input.hpp  main.cpp  player.cpp  player.hpp
libs/: CMakeLists.txt
libs/cli/: CMakeLists.txt
libs/cli/include/: controller.h  input_handler.h  input_processor.h
libs/cli/src/: controller.c  input_handler.c  input_processor.c  input_processor.test.cpp  main.c
libs/core/: CMakeLists.txt
libs/core/include/: guards.h  product.h  product_stock.h  render.h  state_save.h  warehouse.h
libs/core/src/: guards.c  guards.test.cpp  product.c  product.test.cpp  product_stock.test.cpp  render.c  state_save.c  warehouse.c  warehouse_section.test.cpp
libs/unit_test_runner/: CMakeLists.txt
libs/validation/: CMakeLists.txt
libs/validation/include/: validator.h
libs/validation/src/: validator.c
ocen-win/: cfg.bat
scripts/: i.txt  run_scenario.sh  scenario.txt
snake/: .clang-format  .gitignore  main.cpp  snake.sln  snake.vcxproj
src/: AISD Calculator.vcxproj  App.cpp  App.h  CMakeLists.txt  Entity.cpp  Entity.h  Game.cpp  Game.h  PostfixNotation.h  Stack.h  Token.cpp  Token.h  app.c  array_1D.hpp  array_2D.hpp  board.cpp  board.hpp  board_game_over.cpp  board_generate_possible_turns.cpp  board_possible.cpp  board_win_naive_opponent.cpp  board_win_perfect_opponent.cpp  canWinWithNaiveOpponent.cpp  canWinWithPerfectOpponent.cpp  command_parser.c  config.c  controller.c  entity.c  file_handler.c  game.c  game.cpp  generatePossibleTurns.cpp  guards.c  handleQuestion.cpp  handle_question.cpp  handle_question.hpp  input.c  input_handler.c  input_processor.c  isBoardPossible.cpp  (+17 more)
src/web/: contact.html  history.html  index.html
src/web/assets/scripts/: checkScriptEnabled.js  darkMode.js  loading.js  location.js  validateContactForm.js
src/web/assets/styles/: common.css  contact.css  core.css
studia-PO-Lab-1/: FabrykaFigur.h  FiguraPlaska.cpp  Prostokat.h  Trojkat.h  studia-PO-Lab-1.sln  studia-PO-Lab-1.vcxproj  studia-PO-Lab-1.vcxproj.filters
studia-PO-Lab-2/: Book.cpp  Book.h  Library.cpp  Library.h  main.cpp  studia-PO-Lab-2.sln  studia-PO-Lab-2.vcxproj  studia-PO-Lab-2.vcxproj.filters
test/: 4.in.txt
tests/: 0.in.txt  0.out.txt  11.in.txt  11.out.txt  16.in.txt  16.out.txt  2.in.txt  2.out.txt  21.in.txt  21.out.txt  4.out.txt  6.out.txt  CMakeLists.txt  guards_tests.cpp  input_processor_tests.cpp  line_parser_tests.cpp  product_stock_list_tests.cpp  product_tests.cpp  test_runner.cpp  u.txt  validator_tests.cpp  warehouse_section_tests.cpp  warehouse_tests.cpp
tools/: run_scenario.sh
tpikies_PP_homework_intr3/: input1.txt  input2.txt  main.cpp
tpikies_PP_workshop_game1_ext/: constans.h  main.cpp  mines.cpp  mines.h  player.cpp  tpikies_PP_workshop_game1_ext.vcxproj  tpikies_PP_workshop_game1_ext.vcxproj.filters  walls.cpp
tpikies_PP_workshop_game1_extext/: base64.cpp  base64.h  constants.h  game.cpp  game.h  input1.txt  main.cpp  player.cpp  player.h  print.cpp  print.h  tpikies_PP_workshop_game1_ext.sln  tpikies_PP_workshop_game1_ext.vcxproj  tpikies_PP_workshop_game1_ext.vcxproj.filters  walls.cpp  walls.h
(+61 files in other folders)
